menu links: fix issue with clipped text hover

--- a/app/components/navigation/Menu.module.css
+++ b/app/components/navigation/Menu.module.css
@@ -29,7 +29,7 @@
 
 .menuLinkText svg path,
 .menuLinkTextActive svg path {
-  transition: stroke 0.5s ease;
+  transition: stroke 1s 0.2s ease;
 }
 
 .menuLink:hover svg path,
